--- a/package.json
+++ b/package.json
@@ -9,17 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.8",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
+    "@uiw/codemirror-theme-vscode": "^4.19.16",
+    "@uiw/react-codemirror": "^4.19.16",
+    "assert": "^2.0.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "firebase": "^9.22.0",
     "next": "13.3.0",
-    "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.8.0",
+    "react-split": "^2.0.14",
+    "react-toastify": "^9.1.2",
+    "react-youtube": "^10.1.0",
+    "recoil": "^0.7.7",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
